# tree_grower

./: .env.sample  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: .env  crud.py  db.py  dependencies.py  main.py  models.py  schemas.py
kubernetes/: database.yaml  deployment.yaml  ingress.yaml  service.yaml  start.sh  test.sh
